--- a/Register.html
+++ b/Register.html
@@ -3,101 +3,95 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AVENTONES</title>
     <link rel="stylesheet" href="css/register.css" />
   </head>
   <body>
-    <section class="hero">
-  <img src="img/LogoAventones.png" alt="Logo" />
-  <h1>AVENTONES</h1>
-</section>
+    <header class="header">
+      <img src="img/LogoAventones.png" alt="Logo" />
+      <h1>AVENTONES</h1>
+    </header>
 
-<section class="form">
-  <h2 class="title-form">User Registration</h2>
-  <div class="registration-body">
-    <div class="column-form">
+    <section class="form">
+      <h2 class="title-form">User Registration</h2>
+      <div class="registration-body">
+        <div class="column-form">
+          <div>
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" />
+          </div>
+          <div>
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" />
+          </div>
+        </div>
+
+        <div class="horizontal-form">
+          <div>
+            <label for="email">Email</label>
+            <input type="text" id="email" />
+          </div>
+        </div>
+
+        <div class="column-form">
+          <div>
+            <label for="register-password">Password</label>
+            <input type="text" id="register-password" />
+          </div>
+          <div>
+            <label for="repeat-password">Repeat Password</label>
+            <input type="text" id="repeat-password" />
+          </div>
+        </div>
+
+        <div class="horizontal-form">
+          <div>
+            <label for="address">Address</label>
+            <input type="text" id="address" />
+          </div>
+        </div>
+
+        <div class="column-form">
+          <div>
+            <label for="country">Country</label>
+            <input type="text" id="country" />
+          </div>
+          <div>
+            <label for="state">State</label>
+            <input type="text" id="state" />
+          </div>
+        </div>
+
+        <div class="column-form">
+          <div>
+            <label for="city">City</label>
+            <input type="text" id="city" />
+          </div>
+          <div>
+            <label for="phone-number">Phone Number</label>
+            <input type="text" id="phone-number" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="cta-buttons">
       <div>
-        <label for="first-name">First Name</label>
-        <input type="text" id="first-name" />
+        <p>Already an user? <a href="login.html">Login here</a></p>
+        <p>Register as driver? <a href="">Click here</a></p>
       </div>
       <div>
-        <label for="last-name">Last Name</label>
-        <input type="text" id="last-name" />
+        <a href="">Sign up</a>
       </div>
-    </div>
+    </section>
+    <hr />
 
-    <div class="horizontal-form">
-      <div>
-        <label for="email">Email</label>
-        <input type="text" id="email" />
-      </div>
-    </div>
+    <nav>
+      <a href="#">Home</a> | <a href="#">Rides</a> | <a href="#">Bookings</a> |
+      <a href="#">Settings</a> | <a href="login.html">Login</a> |
+      <a href="#">Register</a>
+    </nav>
 
-    <div class="column-form">
-      <div>
-        <label for="password">Password</label>
-        <input type="text" id="password" />
-      </div>
-      <div>
-        <label for="repeat-password">Repeat Password</label>
-        <input type="text" id="repeat-password" />
-      </div>
-    </div>
-
-    <div class="horizontal-form">
-      <div>
-        <label for="address">Address</label>
-        <input type="text" id="address" />
-      </div>
-    </div>
-
-    <div class="column-form">
-      <div>
-        <label for="country">Country</label>
-        <input type="text" id="country" />
-      </div>
-      <div>
-        <label for="state">State</label>
-        <input type="text" id="state" />
-      </div>
-    </div>
-
-    <div class="column-form">
-      <div>
-        <label for="city">City</label>
-        <input type="text" id="city" />
-      </div>
-      <div>
-        <label for="phone-number">Phone Number</label>
-        <input type="text" id="phone-number" />
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="cta-buttons">
-  <div>
-    <p>Already an user? <a href="">Login here</a></p>
-    <p>Register as driver? <a href="">Click here</a></p>
-  </div>
-  <div>
-    <a href="">Sign up</a>
-  </div>
-</section>
-<hr>
-
-<nav>
-  <a href="#">Home</a> |
-  <a href="#">Rides</a> |
-  <a href="#">Bookings</a> |
-  <a href="#">Settings</a> |
-  <a href="#">Login</a> |
-  <a href="#">Register</a>
-</nav>
-
-<footer>
-  © Aventones.com
-</footer>
-
+    <footer>© Aventones.com</footer>
   </body>
 </html>
