--- a/Register.html
+++ b/Register.html
@@ -89,7 +89,7 @@
     <nav>
       <a href="#">Home</a> | <a href="#">Rides</a> | <a href="#">Bookings</a> |
       <a href="#">Settings</a> | <a href="login.html">Login</a> |
-      <a href="#">Register</a>
+      <a href="register.html">Register</a>
     </nav>
 
     <footer>© Aventones.com</footer>
