--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
           </div>
 
           <div class="cta-button">
-            <button type="submit">Login</button>
+            <button onclick="window.location.href='myRides.html'">Login<a href="myRides.html"></a></button>
           </div>
         </section>
       </div>
@@ -45,7 +45,7 @@
     <nav>
       <a href="#">Home</a> | <a href="#">Rides</a> | <a href="#">Bookings</a> |
       <a href="#">Settings</a> | <a href="login.html">Login</a> |
-      <a href="#">Register</a>
+      <a href="register.html">Register</a>
     </nav>
 
     <footer class="footer">© Aventones.com</footer>
