pagina bookings hecha

--- a/myRides.html
+++ b/myRides.html
@@ -15,8 +15,8 @@
     <section class="navbar">
       <div class="nav-left">
         <a href="#" class="nav-link">Home</a>
-        <a href="#" class="nav-link active">Rides</a>
-        <a href="#" class="nav-link">Bookings</a>
+        <a href="myRides.html" class="nav-link active">Rides</a>
+        <a href="bookings.html" class="nav-link">Bookings</a>
       </div>
 
       <div class="nav-right">
