Ajustes minimos en todas las paginas, editar y crear viaje terminados

--- a/Register.html
+++ b/Register.html
@@ -81,13 +81,13 @@
         <p>Register as driver? <a href="">Click here</a></p>
       </div>
       <div>
-        <a href="">Sign up</a>
+        <a href="login.html">Sign up</a>
       </div>
     </section>
     <hr />
 
     <nav>
-      <a href="#">Home</a> | <a href="#">Rides</a> | <a href="#">Bookings</a> |
+      <a href="#">Home</a> | <a href="myRides.html">Rides</a> | <a href="bookings.html">Bookings</a> |
       <a href="#">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
