--- a/login.html
+++ b/login.html
@@ -43,11 +43,10 @@
 
     <hr />
     <nav>
-      <a href="#">Home</a> | <a href="#">Rides</a> | <a href="#">Bookings</a> |
+      <a href="#">Home</a> | <a href="myRides.html">Rides</a> | <a href="bookings.html">Bookings</a> |
       <a href="#">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
-
     <footer class="footer">© Aventones.com</footer>
   </body>
 </html>
