Detalles pulidos en register

--- a/editRide.html
+++ b/editRide.html
@@ -32,11 +32,21 @@
         <div class="form-group-left">
           <div>
             <label for="departure">Departure from</label>
-            <input type="text" id="departure" name="departure" />
+            <input
+              type="text"
+              id="departure"
+              name="departure"
+              placeholder="Quesada"
+            />
           </div>
           <div>
             <label for="arrival">Arrive To</label>
-            <input type="text" id="arrival" name="arrival" />
+            <input
+              type="text"
+              id="arrival"
+              name="arrival"
+              placeholder="Zarcero"
+            />
           </div>
         </div>
 
