--- a/Register.html
+++ b/Register.html
@@ -7,88 +7,94 @@
     <link rel="stylesheet" href="css/register.css" />
   </head>
   <body>
-    <header class="header">
-      <img src="img/LogoAventones.png" alt="Logo" />
-      <h1>AVENTONES</h1>
-    </header>
+    <div class="page-container">
+      <header class="header">
+        <img src="img/LogoAventones.png" alt="Logo" />
+        <h1>AVENTONES</h1>
+      </header>
 
-    <section class="form">
-      <h2 class="title-form">User Registration</h2>
-      <div class="registration-body">
-        <div class="column-form">
-          <div>
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" />
+      <section class="form">
+        <h2 class="title-form">User Registration</h2>
+        <hr />
+        <div class="registration-body">
+          <div class="column-form">
+            <div>
+              <label for="first-name">First Name</label>
+              <input type="text" id="first-name" />
+            </div>
+            <div>
+              <label for="last-name">Last Name</label>
+              <input type="text" id="last-name" />
+            </div>
           </div>
-          <div>
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" />
+
+          <div class="horizontal-form">
+            <div>
+              <label for="email">Email</label>
+              <input type="text" id="email" />
+            </div>
+          </div>
+
+          <div class="column-form">
+            <div>
+              <label for="register-password">Password</label>
+              <input type="text" id="register-password" />
+            </div>
+            <div>
+              <label for="repeat-password">Repeat Password</label>
+              <input type="text" id="repeat-password" />
+            </div>
+          </div>
+
+          <div class="horizontal-form">
+            <div>
+              <label for="address">Address</label>
+              <input type="text" id="address" />
+            </div>
+          </div>
+
+          <div class="column-form">
+            <div>
+              <label for="country">Country</label>
+              <select id="make" name="make">
+                <option value="Costa Rica">Costa Rica</option>
+                <option value="Panama">Panama</option>
+              </select>
+            </div>
+            <div>
+              <label for="state">State</label>
+              <input type="text" id="state" />
+            </div>
+          </div>
+
+          <div class="column-form">
+            <div>
+              <label for="city">City</label>
+              <input type="text" id="city" />
+            </div>
+            <div>
+              <label for="phone-number">Phone Number</label>
+              <input type="text" id="phone-number" />
+            </div>
           </div>
         </div>
+      </section>
 
-        <div class="horizontal-form">
-          <div>
-            <label for="email">Email</label>
-            <input type="text" id="email" />
-          </div>
+      <section class="cta-buttons">
+        <div>
+          <p>Already an user? <a href="login.html">Login here</a></p>
+          <p>Register as driver? <a href="">Click here</a></p>
         </div>
-
-        <div class="column-form">
-          <div>
-            <label for="register-password">Password</label>
-            <input type="text" id="register-password" />
-          </div>
-          <div>
-            <label for="repeat-password">Repeat Password</label>
-            <input type="text" id="repeat-password" />
-          </div>
+        <div>
+          <a href="login.html">Sign up</a>
         </div>
-
-        <div class="horizontal-form">
-          <div>
-            <label for="address">Address</label>
-            <input type="text" id="address" />
-          </div>
-        </div>
-
-        <div class="column-form">
-          <div>
-            <label for="country">Country</label>
-            <input type="text" id="country" />
-          </div>
-          <div>
-            <label for="state">State</label>
-            <input type="text" id="state" />
-          </div>
-        </div>
-
-        <div class="column-form">
-          <div>
-            <label for="city">City</label>
-            <input type="text" id="city" />
-          </div>
-          <div>
-            <label for="phone-number">Phone Number</label>
-            <input type="text" id="phone-number" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="cta-buttons">
-      <div>
-        <p>Already an user? <a href="login.html">Login here</a></p>
-        <p>Register as driver? <a href="">Click here</a></p>
-      </div>
-      <div>
-        <a href="login.html">Sign up</a>
-      </div>
-    </section>
+      </section>
+    </div>
     <hr />
-
     <nav>
-      <a href="#">Home</a> | <a href="myRides.html">Rides</a> | <a href="bookings.html">Bookings</a> |
-      <a href="#">Settings</a> | <a href="login.html">Login</a> |
+      <a href="#">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> | <a href="#">Settings</a> |
+      <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
 
