--- a/editProfile.html
+++ b/editProfile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AVENTONES</title>
-    <link rel="stylesheet" href="css/register.css" />
+    <link rel="stylesheet" href="css/editProfile.css" />
   </head>
   <body>
     <div class="page-container">
@@ -12,26 +12,41 @@
         <img src="img/LogoAventones.png" alt="Logo" />
         <h1>AVENTONES</h1>
       </header>
+      <section class="navbar">
+        <div class="nav-left">
+          <a href="#" class="nav-link active">Home</a>
+          <a href="myRides.html" class="nav-link">Rides</a>
+          <a href="bookings.html" class="nav-link">Bookings</a>
+        </div>
 
+        <div class="nav-right">
+          <input type="text" placeholder="Search..." class="search-input" />
+          <img src="img/user-icon.png" alt="User" class="user-icon" />
+        </div>
+      </section>
       <section class="form">
-        <h2>User Registration</h2>
-        <hr />
-        <div class="registration-body">
+        <div class="form-title"><h2>Edit Profile</h2></div>
+
+        <div class="form-body">
           <div class="column-form">
             <div>
               <label for="first-name">First Name</label>
-              <input type="text" id="first-name" />
+              <input type="text" id="first-name" placeholder="Jeremy" />
             </div>
             <div>
               <label for="last-name">Last Name</label>
-              <input type="text" id="last-name" />
+              <input type="text" id="last-name" placeholder="Rodriguez" />
             </div>
           </div>
 
           <div class="horizontal-form">
             <div>
               <label for="email">Email</label>
-              <input type="text" id="email" />
+              <input
+                type="text"
+                id="email"
+                placeholder="rodriguezjeremyinfj@gmail.com"
+              />
             </div>
           </div>
 
@@ -49,7 +64,11 @@
           <div class="horizontal-form">
             <div>
               <label for="address">Address</label>
-              <input type="text" id="address" />
+              <input
+                type="text"
+                id="address"
+                placeholder="1.5km sur parque Santa Rosa Pocosol"
+              />
             </div>
           </div>
 
@@ -63,30 +82,28 @@
             </div>
             <div>
               <label for="state">State</label>
-              <input type="text" id="state" />
+              <input type="text" id="state" placeholder="Alajuela" />
             </div>
           </div>
 
           <div class="column-form">
             <div>
               <label for="city">City</label>
-              <input type="text" id="city" />
+              <input
+                type="text"
+                id="city"
+                placeholder="Santa Rosa de Pocosol"
+              />
             </div>
             <div>
               <label for="phone-number">Phone Number</label>
               <input type="text" id="phone-number" />
             </div>
           </div>
-        </div>
-      </section>
-
-      <section class="cta-buttons">
-        <div>
-          <p>Already an user? <a href="login.html">Login here</a></p>
-          <p>Register as driver? <a href="">Click here</a></p>
-        </div>
-        <div>
-          <a href="login.html">Sign up</a>
+          <div class="form-actions">
+            <a href="myRides.html" class="cancel">Cancel</a>
+            <button type="submit" class="create-btn">Save</button>
+          </div>
         </div>
       </section>
     </div>
