pagina ride details terminado

--- a/myRides.html
+++ b/myRides.html
@@ -51,7 +51,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><a href="#">Quesada</a></td>
+            <td><a href="rideDetails.html">Quesada</a></td>
             <td>Alajuela</td>
             <td>2</td>
             <td>Nissan Pathfinder 2015</td>
@@ -59,7 +59,7 @@
             <td><a href="editRide.html">Edit</a> | <a href="#">Delete</a></td>
           </tr>
           <tr>
-            <td><a href="#">Quesada</a></td>
+            <td><a href="rideDetails.html">Quesada</a></td>
             <td>Naranjo</td>
             <td>1</td>
             <td>Toyota Corolla 2020</td>
@@ -67,7 +67,7 @@
             <td><a href="editRide.html">Edit</a> | <a href="#">Delete</a></td>
           </tr>
           <tr>
-            <td><a href="#">Aguas Zarcas</a></td>
+            <td><a href="rideDetails.html">Aguas Zarcas</a></td>
             <td>Naranjo</td>
             <td>1</td>
             <td>Ford Festiva 1990</td>
