--- a/Register.html
+++ b/Register.html
@@ -92,7 +92,7 @@
     </div>
     <hr />
     <nav>
-      <a href="#">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
       <a href="bookings.html">Bookings</a> | <a href="#">Settings</a> |
       <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
