--- a/editProfile.html
+++ b/editProfile.html
@@ -14,7 +14,7 @@
       </header>
       <section class="navbar">
         <div class="nav-left">
-          <a href="#" class="nav-link active">Home</a>
+          <a href="searchRides.html" class="nav-link active">Home</a>
           <a href="myRides.html" class="nav-link">Rides</a>
           <a href="bookings.html" class="nav-link">Bookings</a>
         </div>
@@ -109,7 +109,7 @@
     </div>
     <hr />
     <nav>
-      <a href="#">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
       <a href="bookings.html">Bookings</a> | <a href="#">Settings</a> |
       <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
