--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 
     <hr />
     <nav>
-      <a href="#">Home</a> | <a href="myRides.html">Rides</a> | <a href="bookings.html">Bookings</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> | <a href="bookings.html">Bookings</a> |
       <a href="#">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
