Se aplico cambios en el header, se aplico funcionalidad al settings del nav(editProfile), tambien se agrego el submenu que requerian las paginas(en los que se mostraba el menu)

--- a/bookings.html
+++ b/bookings.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <header class="header">
-      <img src="img/LogoAventones.png" alt="Logo" />
-      <h1>AVENTONES</h1>
+      <img src="img/AventonesLogo.png" alt="Logo" />
     </header>
-
     <section class="navbar">
       <div class="nav-left">
         <a href="searchRides.html" class="nav-link">Home</a>
@@ -21,7 +19,16 @@
 
       <div class="nav-right">
         <input type="text" placeholder="Search..." class="search-input" />
-        <img src="img/user-icon.png" alt="User" class="user-icon" />
+        <div class="user-menu">
+          <label for="toggle-menu">
+            <img src="img/user-icon.png" alt="User" class="user-icon" />
+          </label>
+          <input type="checkbox" id="toggle-menu" />
+          <div class="dropdown-menu">
+            <a href="#" class="submenu-logout">Logout</a>
+            <a href="editProfile.html">Settings</a>
+          </div>
+        </div>
       </div>
     </section>
     <section class="bookings-section">
@@ -60,8 +67,9 @@
 
     <hr />
     <nav>
-      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> | <a href="bookings.html">Bookings</a> |
-      <a href="#">Settings</a> | <a href="login.html">Login</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
+      <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
