--- a/configuration.html
+++ b/configuration.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="css/configuration.css" />
   </head>
   <body>
-    <header class="header">
-      <img src="img/LogoAventones.png" alt="Logo" />
-      <h1>AVENTONES</h1>
-    </header>
+      <header class="header">
+        <img src="img/AventonesLogo.png" alt="Logo" />
+      </header>
 
     <section class="navbar">
       <div class="nav-left">
-        <a href="searchRides.html" class="nav-link">Home</a>
+        <a href="searchRides.html" class="nav-link active ">Home</a>
         <a href="myRides.html" class="nav-link">Rides</a>
-        <a href="bookings.html" class="nav-link active">Bookings</a>
+        <a href="bookings.html" class="nav-link">Bookings</a>
       </div>
 
       <div class="nav-right">
@@ -49,8 +48,8 @@
 
     <hr />
     <nav>
-      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="#">Settings</a> |
+<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
       <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
