--- a/editProfile.html
+++ b/editProfile.html
@@ -9,8 +9,7 @@
   <body>
     <div class="page-container">
       <header class="header">
-        <img src="img/LogoAventones.png" alt="Logo" />
-        <h1>AVENTONES</h1>
+        <img src="img/AventonesLogo.png" alt="Logo" />
       </header>
       <section class="navbar">
         <div class="nav-left">
@@ -109,8 +108,8 @@
     </div>
     <hr />
     <nav>
-      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="#">Settings</a> |
+<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
       <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
