--- a/editRide.html
+++ b/editRide.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="css/editRide.css" />
   </head>
   <body>
-    <header class="header">
-      <img src="img/LogoAventones.png" alt="Logo" />
-      <h1>AVENTONES</h1>
-    </header>
+      <header class="header">
+        <img src="img/AventonesLogo.png" alt="Logo" />
+      </header>
 
     <section class="navbar">
       <div class="nav-left">
@@ -123,8 +122,8 @@
 
     <hr />
     <nav>
-      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="#">Settings</a> |
+<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
       <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
