--- a/login.html
+++ b/login.html
@@ -10,8 +10,7 @@
     <div class="page-container">
       <div class="box-shadow-main">
         <header class="header">
-          <img src="img/LogoAventones.png" alt="Logo" />
-          <h1>AVENTONES</h1>
+          <img src="img/AventonesLogo.png" alt="Logo" />
         </header>
 
         <section class="login-form">
@@ -35,7 +34,9 @@
           </div>
 
           <div class="cta-button">
-            <button onclick="window.location.href='myRides.html'">Login<a href="myRides.html"></a></button>
+            <button onclick="window.location.href='myRides.html'">
+              Login<a href="myRides.html"></a>
+            </button>
           </div>
         </section>
       </div>
@@ -43,8 +44,9 @@
 
     <hr />
     <nav>
-      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> | <a href="bookings.html">Bookings</a> |
-      <a href="#">Settings</a> | <a href="login.html">Login</a> |
+<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
+      <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
