--- a/myRides.html
+++ b/myRides.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="img/LogoAventones.png" alt="Logo" />
-      <h1>AVENTONES</h1>
+      <img src="img/AventonesLogo.png" alt="Logo" />
     </header>
 
     <section class="navbar">
@@ -79,8 +78,9 @@
     </section>
     <hr />
     <nav>
-      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> | <a href="bookings.html">Bookings</a> |
-      <a href="#">Settings</a> | <a href="login.html">Login</a> |
+<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
+      <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
