--- a/searchRides.html
+++ b/searchRides.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="img/LogoAventones.png" alt="Logo" />
-      <h1>AVENTONES</h1>
+      <img src="img/AventonesLogo.png" alt="Logo" />
     </header>
 
     <section class="navbar">
@@ -123,14 +122,14 @@
       </table>
 
       <div class="map-image">
-        <img src="img/mapa.png" alt="mapa">
+        <img src="img/mapa.png" alt="mapa" />
       </div>
     </section>
     <hr />
     <nav>
       <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="#">Settings</a> |
-      <a href="login.html">Login</a> |
+      <a href="bookings.html">Bookings</a> |
+      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
