Se modifico links en la tabla.

--- a/searchRides.html
+++ b/searchRides.html
@@ -89,34 +89,34 @@
             <td class="foto-perfil">
               <img src="img/user-icon.png" alt="" />jrodriguezes
             </td>
-            <td><a href="rideDetails.html">Quesada</a></td>
+            <td><a href="#">Quesada</a></td>
             <td>Alajuela</td>
             <td>2</td>
             <td>Nissan Pathfinder 2015</td>
             <td>$5</td>
-            <td><a href="editRide.html">Request</a></td>
+            <td><a href="rideDetails.html">Request</a></td>
           </tr>
           <tr>
             <td class="foto-perfil">
               <img src="img/user-icon.png" alt="" />jrodriguezes
             </td>
-            <td><a href="rideDetails.html">Quesada</a></td>
+            <td><a href="#">Quesada</a></td>
             <td>Naranjo</td>
             <td>1</td>
             <td>Toyota Corolla 2020</td>
             <td>$10</td>
-            <td><a href="editRide.html">Request</a></td>
+            <td><a href="rideDetails.html">Request</a></td>
           </tr>
           <tr>
             <td class="foto-perfil">
               <img src="img/user-icon.png" alt="" />yluna
             </td>
-            <td><a href="rideDetails.html">Aguas Zarcas</a></td>
+            <td><a href="#">Aguas Zarcas</a></td>
             <td>Naranjo</td>
             <td>1</td>
             <td>Ford Festiva 1990</td>
             <td>--</td>
-            <td><a href="editRide.html">Request</a></td>
+            <td><a href="rideDetails.html">Request</a></td>
           </tr>
         </tbody>
       </table>
