Ajustes en los header de los section

--- a/editRide.html
+++ b/editRide.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/editRide.css" />
   </head>
   <body>
-      <header class="header">
-        <img src="img/AventonesLogo.png" alt="Logo" />
-      </header>
+    <header class="header">
+      <img src="img/AventonesLogo.png" alt="Logo" />
+    </header>
 
     <section class="navbar">
       <div class="nav-left">
@@ -24,10 +24,13 @@
       </div>
     </section>
 
-    <section class="new-ride-section">
-      <h2>Edit Ride</h2>
+    <section class="edit-ride-section">
+      <div class="edit-ride-header">
+        <h2>Edit Ride</h2>
+        <hr />
+      </div>
 
-      <div class="new-ride-main">
+      <div class="edit-ride-main">
         <div class="form-group-left">
           <div>
             <label for="departure">Departure from</label>
@@ -116,15 +119,14 @@
           <a href="myRides.html" class="cancel">Cancel</a>
           <button type="submit" class="create-btn">Save</button>
         </div>
-        
       </div>
     </section>
 
     <hr />
     <nav>
-<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
-      <a href="login.html">Login</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> |
+      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
