--- a/newRide.html
+++ b/newRide.html
@@ -35,7 +35,10 @@
     </section>
 
     <section class="new-ride-section">
-      <h2>New Ride</h2>
+      <div class="new-ride-header">
+        <h2>New Ride</h2>
+        <hr />
+      </div>
 
       <div class="new-ride-main">
         <div class="form-group-left">
@@ -121,9 +124,9 @@
 
     <hr />
     <nav>
-<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
-      <a href="login.html">Login</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> |
+      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
