--- a/searchRides.html
+++ b/searchRides.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AVENTONES</title>
     <link rel="stylesheet" href="css/searchRides.css" />
   </head>
   <body>
@@ -51,7 +51,7 @@
               <option value="puntarenas">Puntarenas</option>
               <option value="santa-clara">Santa Clara</option>
             </select>
-            <button type="submit" class="create-btn">Find Rides</button>
+            <button type="submit" class="find-rides-btn">Find Rides</button>
           </div>
         </div>
 
