testeado desde laptop para que tenga una visualizacion mejor, detalles minimos implementados

--- a/Register.html
+++ b/Register.html
@@ -80,11 +80,11 @@
       </section>
 
       <section class="cta-buttons">
-        <div>
+        <div class="cta-buttons-relinks">
           <p>Already an user? <a href="login.html">Login here</a></p>
           <p>Register as driver? <a href="">Click here</a></p>
         </div>
-        <div>
+        <div class="cta-buttons-sign-up">
           <a href="login.html">Sign up</a>
         </div>
       </section>
