--- a/configuration.html
+++ b/configuration.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css/configuration.css" />
   </head>
   <body>
-      <header class="header">
-        <img src="img/AventonesLogo.png" alt="Logo" />
-      </header>
+    <header class="header">
+      <img src="img/AventonesLogo.png" alt="Logo" />
+    </header>
 
     <section class="navbar">
       <div class="nav-left">
-        <a href="searchRides.html" class="nav-link active ">Home</a>
+        <a href="searchRides.html" class="nav-link active">Home</a>
         <a href="myRides.html" class="nav-link">Rides</a>
         <a href="bookings.html" class="nav-link">Bookings</a>
       </div>
@@ -48,9 +48,9 @@
 
     <hr />
     <nav>
-<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
-      <a href="login.html">Login</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> |
+      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
