--- a/editProfile.html
+++ b/editProfile.html
@@ -24,7 +24,10 @@
         </div>
       </section>
       <section class="form">
-        <div class="form-title"><h2>Edit Profile</h2></div>
+        <div class="form-title">
+          <h2>Edit Profile</h2>
+          <hr />
+        </div>
 
         <div class="form-body">
           <div class="column-form">
@@ -108,9 +111,9 @@
     </div>
     <hr />
     <nav>
-<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
-      <a href="login.html">Login</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> |
+      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
 
