Paginas pasadas por https://validator.w3.org/

--- a/Register.html
+++ b/Register.html
@@ -55,7 +55,7 @@
           <div class="column-form">
             <div>
               <label for="country">Country</label>
-              <select id="make" name="make">
+              <select id="country" name="country">
                 <option value="Costa Rica">Costa Rica</option>
                 <option value="Panama">Panama</option>
               </select>
