--- a/login.html
+++ b/login.html
@@ -29,14 +29,11 @@
 
             <label for="login-password">Password</label>
             <input type="password" id="login-password" value="1234567890" />
-
             <p>Not an user? <a href="register.html">Register Now</a></p>
           </div>
 
           <div class="cta-button">
-            <button onclick="window.location.href='myRides.html'">
-              Login<a href="myRides.html"></a>
-            </button>
+            <button onclick="window.location.href='myRides.html'">Login</button>
           </div>
         </section>
       </div>
