--- a/bookings.html
+++ b/bookings.html
@@ -10,6 +10,14 @@
     <header class="header">
       <img src="img/AventonesLogo.png" alt="Logo" />
     </header>
+    <nav>
+      <div>
+
+      </div>
+      <div>
+        
+      </div>
+    </nav>
     <section class="navbar">
       <div class="nav-left">
         <a href="searchRides.html" class="nav-link">Home</a>
@@ -34,7 +42,7 @@
     <section class="bookings-section">
       <div class="booking-header">
         <h2>Bookings</h2>
-        <hr>
+        <hr />
       </div>
 
       <table class="bookings-table">
@@ -69,8 +77,8 @@
     <hr />
     <nav>
       <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
-      <a href="login.html">Login</a> |
+      <a href="bookings.html">Bookings</a> |
+      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
