--- a/myRides.html
+++ b/myRides.html
@@ -27,7 +27,7 @@
     <section class="rides-section">
       <div class="rides-header">
         <h2>My rides</h2>
-        <hr>
+        <hr />
       </div>
       <div class="box-button">
         <button
@@ -79,9 +79,9 @@
     </section>
     <hr />
     <nav>
-<a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
-      <a href="bookings.html">Bookings</a> | <a href="editProfile.html">Settings</a> |
-      <a href="login.html">Login</a> |
+      <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
+      <a href="bookings.html">Bookings</a> |
+      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
